fixed floating arrow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,13 @@ html {
   opacity: 0.5;
 }
 
+.menu__content__link,
+.arrow__link,
+.contact__link {
+  color: black;
+  text-decoration: none;
+}
+
 .arrow {
   background-color: #61dafb;
   text-align: center;
@@ -97,15 +104,8 @@ html {
   height: 50px;
   border-radius: 10%;
   animation-duration: 2s;
-  animation-iteration-count: infinite;
-  margin-bottom: -300px;
-}
-
-.menu__content__link,
-.arrow__link,
-.contact__link {
-  color: black;
-  text-decoration: none;
+  animation-iteration-count: infinite;  
+  margin-bottom: 60px;
 }
 
 .arrow {
